src/objects/EFT_Transaction_Status__c.object
<CustomObject>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card Address Verify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card Address Verify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesHeaderStatus__c</fullName>
        <formula>Text(SalesHeader__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesHeaderStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesHeader</label>
        <referenceTo>SalesHeader__c</referenceTo>
        <relationshipLabel>EFTs</relationshipLabel>
        <relationshipName>EFTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EFT Transaction Status</label>
    <nameField>
        <label>EFT Transaction Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EFTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>